--- a/src/index.html
+++ b/src/index.html
@@ -8,25 +8,31 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
    <!-- site metas -->
-   <title>misfit</title>
+   <title>Fitonyashki</title>
    <base href="/">
    <meta name="keywords" content="">
    <meta name="description" content="">
    <meta name="author" content="">
-   <!-- bootstrap css -->
-   <link rel="stylesheet" href="css/bootstrap.min.css">
-   <!-- style css -->
-   <link rel="stylesheet" href="css/style.css">
-   <!-- Responsive-->
-   <link rel="stylesheet" href="css/responsive.css">
-   <!-- fevicon -->
-   <link rel="icon" href="images/fevicon.png" type="image/gif" />
-   <!-- Scrollbar Custom CSS -->
-   <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
-   <!-- Tweaks for older IEs-->
-   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+ <!--  <link rel="stylesheet" href="assets/css/main.css">-->
+   <link rel="stylesheet" href="assets/css/jquery.mCustomScrollbar.min.css">
+   <link rel="stylesheet" href="assets/css/nice-select.css">
+   <link rel="stylesheet" href="assets/css/jquery-ui.css">
+   <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
+   <link rel="stylesheet" href="assets/css/slick.css">
+   <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+   <link rel="stylesheet" href="assets/css/meanmenu.css">
+   <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+   <link rel="stylesheet" href="assets/css/icomoon.css">
+   <link rel="stylesheet" href="assets/css/normalize.css">
+   <link rel="stylesheet" href="assets/css/animate.min.css">
    <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
+   <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Raleway:100,400,600,700,900&display=swap'>
+   <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Baloo+Chettan&display=swap'>
+   <link rel="stylesheet" href=https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i'>
+   <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700'>
    <!--[if lt IE 9]>
    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
